Sun Apr 18 2004  Joe Allen <jhallen@world.std.com>
	* syntax.c, uedit.c:

	Added ` u to insert unicode characters in hex.

	Fixed typeing of unicode (utypebw() optimization bug).

	Fixed editor hang when syntax hightlighter hits unicode characters.

Sat Apr 17 2004  Joe Allen <jhallen@world.std.com>
	* bw.c menu.c qw.c scrn.c scrn.h utf8.h w.c w.h:

	Allow UTF-8 in menu entries.

	Clear up genfield() and genfmt() stuff.  Now control characters in
	file names are properly displayed.

	When UTF-8 character decodes to 127 - 159, 0 - 31, display it
	as a control character.

Sat Apr 17 2004  Joe Allen <jhallen@world.std.com>
	* w.c:

	Oops: fixed status line.

Fri Apr 16 2004  Joe Allen <jhallen@world.std.com>
 	* ChangeLog TODO cmd.c macro.c pw.c pw.h rc.c regex.c ublock.c 
 	uedit.c ufile.c umath.c usearch.c ushell.c utag.c utf8.c w.c 
 	w.h:

	UTF-8 now supported in file names and prompts.

	Search should be partially working.  \+ with
	a UTF-8 character following is broken and
	\[ ] only works for bytes.

Fri Apr 16 2004  Joe Allen <jhallen@world.std.com>
	* b.c, bw.c, rc.c, rc.h, tw.c, types.h, utf8.c:

	Fixed bug where '-syntax' on command line had
	no effect.

	Now if terminal is UTF-8, the default file type
	is assumed to be UTF-8.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* utf8.c:

	Added preprocessor directives to utf8.c to check
	for locale support.  Needs more work: should check
	for iconv() support.

	Fix bug which happened when no locale env vars set.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* Makefile.am, configure.ac, main.c, scrn.c, uedit.c,
	ufile.c, utf8.c, utf8.h:

	First attempt at character set conversion iconv().
	Now the file's coding can be different from the terminal's
	coding.  Needs error checking...

	Also, applied secure linux patch from RedHat.

Thu Apr 15 2004  Joe Allen <jhallen@world.std.com>
	* bw.c, help.c, main.c, menu.c, rc.c, scrn.c, scrn.h,
	syntax.c, syntax.h, uedit.c, w.c:
