@@ -65,5 +65,6 @@ int upedge PARAMS((BW *bw));
 int ubyte PARAMS((BW *bw));
 int ucol PARAMS((BW *bw));
 int utxt PARAMS((BASE *bw));
+int uhome PARAMS((BW *bw));
 
 #endif
